Fix the bug of button background color not showing
This commit fix the bug of button background color not showing by adding the
variable name in var , which was earlier left by mistake.

--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ li {
 }
 
 button:hover {
-    background-color: var() !important;
+    background-color: var(--light) !important;
     color: var(--headings) !important;
 }
 
